microconfig-core/src/test/resources/repo/components/exceptions/bad/badEnv/truncate.parseError
Can't parse environment 'parseError'
Cause: Can't parse group declaration: 'group={components=fds}'
Cause: